--- a/docs/ceph/ceph-overview.mdx
+++ b/docs/ceph/ceph-overview.mdx
@@ -1,3 +1,10 @@
+---
+sidebar_position: 1
+---
+
+# Ceph Overview
+
+
 import BrowserWindow from '@site/src/components/BrowserWindow';
 
 <BrowserWindow url="http://localhost:3000">
