--- a/docs/ceph/ceph-overview.mdx
+++ b/docs/ceph/ceph-overview.mdx
@@ -7,7 +7,7 @@ sidebar_position: 1
 
 import BrowserWindow from '@site/src/components/BrowserWindow';
 
-<BrowserWindow url="http://localhost:3000">
+<BrowserWindow url="https://nueavv.github.io">
 
 <h2>Hello from Docusaurus</h2>
 
