--- a/docs/ceph/ceph-installation.mdx
+++ b/docs/ceph/ceph-installation.mdx
@@ -18,6 +18,6 @@ import Zoom from 'react-medium-image-zoom';
 ```
 <Zoom>
 
-![Social Card](/img/docusaurus-social-card.jpg)
+![Social Card](/img/myLogo.jpg)
 
 </Zoom>
